--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ body {
 	min-width: 1300px;
 }
 
+.scat-btn {
+	background-color:#ac6c6c;
+	padding:15px 25px;
+	color:white;
+	border:2px solid black;
+	border-radius:5px;
+	cursor:pointer;
+}
+
 .center {
 	text-align:center;
 }
@@ -177,13 +186,17 @@ body {
 	font-size:1.8em;
 }
 
+#newGameWrapper {
+	position:relative;
+	clear:both;
+}
+
 #newGame {
 	position: absolute;
 	right: 100px;
-	background-color:#ac6c6c;
-	padding:15px 25px;
-	color:white;
-	border:2px solid black;
-	border-radius:5px;
-	cursor:pointer;
+}
+
+#startTimer {
+	position:absolute;
+	left: 370px;
 }
