--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 
 #container {
 	position:relative;
-	max-width:1700px;
+	width:100%;
 }
 
 #pickedList {
@@ -57,11 +57,23 @@ body {
 	text-align: center;
 }
 
-#pickList {
-	text-align:center;
+.selectGame {
+	position:relative;
+	left:0px;
+	margin:0px;
+	width:100%;
 }
 
-#btn-pickIt {
+#createGame {
+	text-align:center;
+}
+#createGame .btn-pickIt {
+	position:absolute;
+	top:0px;
+	left:0px;
+}
+
+.btn-pickIt {
 	background: rgb(236, 99, 55);
 	margin: 0 auto;
 	padding:50px;
@@ -70,10 +82,38 @@ body {
 	font-weight:bold;
 	border: 2px solid rgb(255, 92, 92);
 	width:100%;
+	height:100%;
 }
 
 #joinGame {
 	border-bottom: 4px solid orange;
+}
+
+#enterGameCodeWrapper {
+	position:relative;
+	text-align:center;
+	height:100%;
+}
+
+#gameCode {
+	position:relative;
+	margin: 0 auto;
+	top:30%;
+}
+
+#code {
+	display: block;
+	margin: 0 auto;
+	padding: 40px 20px;
+	text-align: center;
+	font-size: 80px;
+	width: 20%;
+}
+
+#joinButton {
+	position:relative;
+	margin-top:30px;
+	padding:40px 80px;
 }
 
 
