--- a/css/style.css
+++ b/css/style.css
@@ -134,25 +134,26 @@ body {
 }
 
 #cover {
-	position:absolute;
-	top:0;
-	left:0;
-	background-color: darkred;
-	border-bottom:3px solid lightcoral;
-	border-left: 2px solid black;
-	border-right: 2px solid black;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	text-align:center;
-	z-index:99999;
+    position:absolute;
+    top:0;
+    left:0;
+    background-color: darkred;
+    border-bottom:3px solid lightcoral;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    text-align:center;
+    z-index:99999;
+    min-width: 1300px;
 }
 
 #cover #coverText {
-	position:relative;;
-	top:45%;
-	margin:0 auto;
-	font-size:60px;
-	color:white;
+    position:relative;;
+    top:45%;
+    margin:0 auto;
+    font-size:60px;
+    color:white;
 }
 
 #listWrapper {
@@ -310,5 +311,5 @@ body {
     width:10%;
 }
 #newGame {
-    
+
 }
